Create UI listNews in Home

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,15 @@
     <string name="home">Home</string>
     <string name="follows">Follows</string>
     <string name="favorite">Favorite</string>
+    <string name="search">Search</string>
+    <string name="category">Category</string>
+    <string-array name="categories">
+        <item>Following</item>
+        <item>Top-Headline</item>
+        <item>Sport</item>
+        <item>Technology</item>
+        <item>Business</item>
+        <item>Entertainment</item>
+        <item>Health</item>
+    </string-array>
 </resources>
